[gd_scene load_steps=2 format=3 uid="uid://dm1bgsenrojri"]

[ext_resource type="Script" path="res://src/gui/telemetry_tab.gd" id="1_f6jaa"]

[node name="TelemetryTab" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_f6jaa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="LoadingVBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MainLapButton" type="Button" parent="VBoxContainer/LoadingVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load lap data"

[node name="MainDriverLabel" type="RichTextLabel" parent="VBoxContainer/LoadingVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "Driver: "
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ReferenceLapButton" type="Button" parent="VBoxContainer/LoadingVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Load reference lap"

[node name="ReferenceDriverLabel" type="RichTextLabel" parent="VBoxContainer/LoadingVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "Driver: "
fit_content = true
scroll_active = false
autowrap_mode = 0
